fix problem